--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta name="viewport"
+		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
@@ -23,7 +24,7 @@
 	<meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 	<link rel="stylesheet" href="css/style.min.css">
-	<script src="script/script.js" defer></script>
+	<script src="script/script.js"></script>
 	<title>Калькулятор стоимости верстки</title>
 </head>
 
@@ -33,40 +34,43 @@
 
 		<div class="first-screen">
 			<p class="first-screen_description">
-                Расскажите больше о сайте, который вам нужен, чтобы рассчитать примерную стоимость разработки. Если нужна помощь — напишите мне в телеграм или позвоните по телефону.
+				Расскажите больше о сайте, который вам нужен, чтобы рассчитать примерную стоимость разработки. Если нужна помощь
+				— напишите мне в телеграм или позвоните по телефону.
 			</p>
 			<button class="button start-button">Рассчитать...</button>
 		</div>
 
-		<section class="main-form" style="display: none;">
+		<section class="main-form" style="display: block;">
+			<!-- none -->
 			<form class="form-calculate" method="POST" action="server.php" enctype="multipart/form-data">
-
 
 				<fieldset class="first-fieldset">
 					<legend>Какой сайт вам нужен?</legend>
 
 					<p>
-						<input class="css-radio calc-handler" id="landing" type="radio" name="whichSite" value="landing" checked data-site="одностраничный сайт">
+						<input class="css-radio calc-handler" id="landing" type="radio" name="whichSite" value="landing" checked
+							data-site="одностраничный сайт">
 						<label class="label-radio" for="landing">Одностраничный (лендинг)</label>
 					</p>
 
 					<p>
-						<input class="css-radio calc-handler" id="multiPage" type="radio" name="whichSite" value="multiPage" data-site="многостраничный сайт">
+						<input class="css-radio calc-handler" id="multiPage" type="radio" name="whichSite" value="multiPage"
+							data-site="многостраничный сайт">
 						<label class="label-radio" for="multiPage">Многостраничный (корпоративный)</label>
 					</p>
 
 					<p>
-						<input class="css-radio calc-handler" id="onlineStore" type="radio" name="whichSite" value="onlineStore" data-site="интернет магазин">
+						<input class="css-radio calc-handler" id="onlineStore" type="radio" name="whichSite" value="onlineStore"
+							data-site="интернет магазин">
 						<label class="label-radio" for="onlineStore">Интернет-магазин</label>
 					</p>
-
 				</fieldset>
 
 				<div class="total_price">
-                    <span class="total_price__wrap">
-                        <span class="total_price__sum">4000</span>
-                        <span class="total_price__val">₽</span>
-                    </span>
+					<span class="total_price__wrap">
+						<span class="total_price__sum">4000</span>
+						<span class="total_price__val">₽</span>
+					</span>
 				</div>
 
 				<fieldset>
@@ -76,7 +80,6 @@
 						<span class="switcher__indicator"></span>
 						<span class="checkbox-label desktopTemplates_value">Нет</span>
 					</label>
-
 				</fieldset>
 
 				<fieldset>
@@ -86,17 +89,15 @@
 						<span class="switcher__indicator"></span>
 						<span class="checkbox-label adapt_value">Нет</span>
 					</label>
-
 				</fieldset>
 
 				<fieldset>
 					<legend>Нужно ли разрабатывать дизайн сайта под мобильные устройства?</legend>
 					<label class="switcher">
-						<input type="checkbox" class="calc-handler" name="option" id="mobileTemplates" value="mobileTemplates" disabled>
+						<input type="checkbox" class="calc-handler" name="option" id="mobileTemplates" value="mobileTemplates">
 						<span class="switcher__indicator"></span>
 						<span class="checkbox-label mobileTemplates_value">Нет</span>
 					</label>
-
 				</fieldset>
 
 				<fieldset>
@@ -106,18 +107,19 @@
 						<span class="switcher__indicator"></span>
 						<span class="checkbox-label editable_value">Нет</span>
 					</label>
-
 				</fieldset>
 
 				<fieldset>
 					<legend>Дополнительный функционал для сайта</legend>
 					<p>
-						<input class="css-check calc-handler" id="metrikaYandex" type="checkbox" name="option" value="metrikaYandex">
+						<input class="css-check calc-handler" id="metrikaYandex" type="checkbox" name="option"
+							value="metrikaYandex">
 						<label class="label-check" for="metrikaYandex">Яндекс Метрика</label>
 					</p>
 
 					<p>
-						<input class="css-check calc-handler" id="analyticsGoogle" type="checkbox" name="option" value="analyticsGoogle">
+						<input class="css-check calc-handler" id="analyticsGoogle" type="checkbox" name="option"
+							value="analyticsGoogle">
 						<label class="label-check" for="analyticsGoogle">Гугл Аналитика</label>
 					</p>
 
@@ -125,15 +127,14 @@
 						<input class="css-check calc-handler" id="sendOrder" type="checkbox" name="option" value="sendOrder">
 						<label class="label-check" for="sendOrder">Отправка заявок на почту или в телеграм</label>
 					</p>
-
-
 				</fieldset>
 
 				<fieldset>
 					<legend>Время на разработку сайту</legend>
 
 					<p class="fast-description">Разрабатываю <span class="type-site">одностраничный сайт</span> от
-						<span class="max-deadline">7 дней</span>. Если вам нужно сделать сайт быстрее, поставьте галочку ниже и выберите подходящие сроки.
+						<span class="max-deadline">7 дней</span>. Если вам нужно сделать сайт быстрее, поставьте галочку ниже и
+						выберите подходящие сроки.
 					</p>
 
 					<label class="switcher">
@@ -142,7 +143,8 @@
 					</label>
 
 					<p class="fast-range" style="display: none;">
-						<label><input type="range" class="range-deadline calc-handler" min="2" max="7" step="1" value="7" name="deadline"></label>
+						<label><input type="range" class="range-deadline calc-handler" min="2" max="7" step="1" value="7"
+								name="deadline"></label>
 						<span class="deadline"><span class="deadline-value">7 дней</span>*</span>
 						<small class="deadline-small">*точные сроки определяются при обсужении технического задания</small>
 					</p>
@@ -151,10 +153,11 @@
 				<fieldset class="subtotal">
 					<h2>Примерная стоимость разработки сайта</h2>
 					<p class="calc-description">Сделаем одностраничный сайт, адаптированный под мобильные
-					                           устройства и планшеты. Установим панель админстратора, чтобы вы
-					                           могли самостоятельно менять содержание на сайте без разработчика.
-					                           Подключим Яндекс Метрику, Гугл Аналитику и отправку заявок на почту.
+						устройства и планшеты. Установим панель админстратора, чтобы вы
+						могли самостоятельно менять содержание на сайте без разработчика.
+						Подключим Яндекс Метрику, Гугл Аналитику и отправку заявок на почту.
 					</p>
+
 					<p class="calc-description">
 						Оставьте заявку, если хотите, чтобы я разработал сайт. Свяжусь с вами
 						в течение 2 часов, чтобы обсудить задачу.
@@ -192,12 +195,10 @@
 						<p class="total_small">Свяжусь с вами в течение двух часов</p>
 					</div>
 				</fieldset>
-
 			</form>
 		</section>
 	</main>
 
 </body>
-
 
 </html>
