--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<fieldset>
 					<legend>Адаптировать сайт под смартфоны и&nbsp;планшеты?</legend>
 					<label class="switcher">
-						<input type="checkbox" class="calc-handler adapt" name="option" id="adapt" value="adapt">
+						<input type="checkbox" class="calc-handler" name="option" id="adapt" value="adapt">
 						<span class="switcher__indicator"></span>
 						<span class="checkbox-label adapt_value">Нет</span>
 					</label>
@@ -94,7 +94,7 @@
 				<fieldset>
 					<legend>Нужно ли разрабатывать дизайн сайта под мобильные устройства?</legend>
 					<label class="switcher">
-						<input type="checkbox" class="calc-handler adapt_mobile" name="option" id="mobileTemplates" value="mobileTemplates" disabled>
+						<input type="checkbox" class="calc-handler" name="option" id="mobileTemplates" value="mobileTemplates" disabled>
 						<span class="switcher__indicator"></span>
 						<span class="checkbox-label mobileTemplates_value">Нет</span>
 					</label>
